--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
 </header>
 
 <section class="hero hero-small">
-  <h1>Our Full Menu</h1>
+  <h1>Our Ful Menu</h1>
   <p>Authentic Italian dining – explore our full range of dishes & drinks.</p>
 </section>
 
